--- a/modal/package.json
+++ b/modal/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
-    "react-responsive-modal": "^6.2.0",
+    "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
